--- a/BImobile/css/style.css
+++ b/BImobile/css/style.css
@@ -2,10 +2,24 @@ body {
     font-size: 12px;
     font-family: "Microsoft YaHei";
 }
+/* 头部固定 */
+#top_header .is-sticky #filter{
+	top:0;
+	background:rgba(36,37,82, 0.3); 
+}
+
+
+.header_title{
+	font-size: 21px;
+}
+.panel {
+		border-radius :0px !important;
+}
 .panel-heading{
 	   font-weight: 500 !important;
 	   padding-left: 0px;
 }
+
 .green{
 	color: #63B427;
 }
@@ -14,9 +28,14 @@ body {
 }
 .spilt-line{
 	width: 100%;
-	/* height:6px; */
 	border-top: 1px solid #ECECEC;
 	display: inline-block;
+}
+.spilt-line1 {
+	width: 100%;
+	border-top: 1px solid #ECECEC;
+	top: -10px;
+    position: relative;
 }
 .mask{       
     position: absolute; 
@@ -53,26 +72,16 @@ body {
  .left_menu ul a li {
  	height: 50px;
  	line-height: 50px;
- 	font-size: 20px;
+ 	font-size: 18px;
  	padding-left: 30px;
  	color: #9A9A9A;
  	letter-spacing: 1px;
  }
-/*  .left_menu .nav-1 {
-	margin-right:8px;
-	margin-bottom:-3px; 
-	display:inline-block;
-	width:18px;
-	height:15px;
-	background:url(../img/icon01.png)
-} */
+
  .left_menu a:hover,.left_menu a:focus{
  	text-decoration: none;
- 	/* color: #354ea2; */
  }
-/*  .left_menu li:hover i{
-	 background-position:0 -15px;
-} */
+
 .panel-heading {
 	border-color: #E6E6E6;
 }
@@ -84,9 +93,29 @@ body {
 .form-control {
    display: inline-block;
 }
-#filter select{
+ 
+.btn-group>.btn{
 	background-color: #E9EBF0;
+	color: #000;
 }
+.bootstrap-select.btn-group .dropdown-toggle .caret{
+	color: #81838D;
+}
+.dropdown-menu{
+	border-radius: 0px !important;
+}
+.bootstrap-select.btn-group .dropdown-menu li.selected a {
+    background: #E1E5EC;
+    color: #333;
+}
+.dropdown-menu{
+	padding: 0px !important;
+	box-shadow: 5px 5px rgba(102, 102, 102, .1);
+}
+
+
+
+
 @font-face{
 	font-family: 'Hiragino Sans GB W3';
 	font-family: "Calibri Bold";
@@ -96,7 +125,7 @@ body {
 .panel-title{
 	min-height:25px;
 	color:#38519F;
-	font-size: 20px;
+	font-size: 18px;
 	font-family: 'Hiragino Sans GB W3'
 }
 .state .number {
@@ -143,9 +172,121 @@ body {
 	top: 0px;
 }
 
+
+/* 销量预警css */
 .no-top-border tr th{
 	border-top: none  !important;
 }
 .no-top-border th{
 	text-align: center;
+}
+.bootstrap-table .table:not(.table-condensed)>tbody>tr>td{
+	color: #94A2A9 !important;
+}
+.fixed-table-body thead th .th-inner{
+	color: #000 !important;
+}
+
+
+/* dashboard css */
+.dash_ul{
+	text-align: center;
+	font-size: 17px;
+	vertical-align: center;
+}
+.dash_ul li{
+	float: left;
+	list-style-type: none;
+	color: #999999;
+	padding-top: 10px;
+	padding-bottom: 10px;
+}
+
+
+.dash_ul li.active{
+	border-bottom: 1px solid #38519F;
+	color: #38519F;
+}
+.type-info{
+	font-size: 16px;
+	color: #38519F;
+	margin-bottom: 10px;
+}
+
+.jq_funnel_bg1_2 {
+    background: url(../img/jq_funnel_bg1_3.png) no-repeat 46% 60%;
+    background-size: 60%;
+}
+.data h5{
+	font-size: 17px;
+	color: #fff;
+}
+
+.mark-point {
+	position: absolute;
+	top: 0;
+	left: 50%;
+	margin-left: -75px;
+}
+.mark-point .point {
+	width: 100px;
+	position: absolute;
+	color: #334b9a
+}
+
+.mark-point .point span {
+	font-family: 'fjallaone';
+	font-size: 14px;
+	color: #334b9a;
+	margin-right: 10px;
+}
+
+.mark-point .point img {
+	margin-right: 5px;
+}
+/* 
+.legend {
+	bottom: 0px;
+	left: 0px;
+} */
+
+.legend span {
+	display: block;
+	margin-top: 5px;
+}
+.core_font_size{
+	font-size: 13px;
+}
+.core-type{
+	text-align:left;
+	margin-bottom: 5px;
+}
+.core_font_color{
+	color: #9EA7B7;
+}
+.align-left{
+	text-align:left;
+}
+.big-circle{
+	margin-right:3px;
+	font-size:20px;
+}
+.comment{
+	margin-top: 30px;
+	margin-bottom: 20px;
+}
+
+
+/* market_eval css */
+.border-right{
+	border-right:1px solid #E6E6E6;
+}
+
+.no-padding-right{
+	padding-right: 0px;
+}
+
+.ratio{
+	font-size: 14px;
+	color: #95A1B1;
 }
